--- a/src/Rgen.UAT.UATToolFrontEndLayer/Views/Shared/_loginMaster.cshtml
+++ b/src/Rgen.UAT.UATToolFrontEndLayer/Views/Shared/_loginMaster.cshtml
@@ -120,7 +120,7 @@
 
     <footer class="footer" style="bottom:auto !important">
         @*<div class="container">*@
-            @*<p class="text-muted">Copyright ©2016 RGen Software Solutions (I) pvt ltd</p>*@
+            @*<p class="text-muted">Copyright ©2017 Click2Cloud Inc.</p>*@
             <img src='~/images/Footer_new.png' alt="Footer"  width="100%" />
         @*</div>*@
         
